# redpanda-edge-impulse-example

./: .gitignore  CMakeLists.txt  README.md  connect.yaml  example_data.txt
my_edge_impulse_project/: README.txt
my_edge_impulse_project/edge-impulse-sdk/porting/: ei_classifier_porting.h
my_edge_impulse_project/model-parameters/: model_metadata.h  model_variables.h
my_edge_impulse_project/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
src/: transform.cc
